--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <Import Project="Dependencies.props" />
   <PropertyGroup>
-    <LangVersion>8.0</LangVersion>
-    <TargetFrameworks>net5.0;netstandard2.1</TargetFrameworks>
+	  <LangVersion>preview</LangVersion>
+	  <TargetFrameworks>net5.0;netstandard2.1;net48</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup>
     <PackageProjectUrl>https://github.com/kerryjiang/supersocket</PackageProjectUrl>
